# MidiEdit

./: README.md  art.txt  cargo.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/edit-engine/: Cargo.toml
crates/edit-engine/src/: lib.rs
crates/playback/: Cargo.toml
crates/playback/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
